--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -1,1 +1,14 @@
-<header>Header</header>
+<header class="header">
+    <div class="logo-box">
+        <img src="images/Logo.svg" alt="Logo" class="logo">
+    </div>
+
+    <div class="text-box">
+        <h1 class="heading-primary">
+            <span class="heading-primary-main">Rustica</span>
+            <span class="heading-primary-sub">Bio und Fair seit 1991</span>
+        </h1>
+    </div>
+
+
+</header>
