Building a Complex Animated Button - Part 1

--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -9,6 +9,8 @@
             <span class="heading-primary-main">Rustica</span>
             <span class="heading-primary-sub">Bio und Fair seit 1991</span>
         </h1>
+
+        <a href="#" class="btn btn-white">zum Shop</a>
     </div>
 
 
