Building a Complex Animated Button - Part 2

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -144,6 +144,23 @@ h2 {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100px)
+
+  }
+
+80% {
+  transform: translateY(-10px);
+}
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -152,6 +169,10 @@ h2 {
   display: inline-block;
   border-radius: 15px;
   transition: all .2s;
+  position: relative;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
 
 .btn:hover {
@@ -167,4 +188,34 @@ h2 {
 .btn-white {
   background-color: #474c3c;
   color: #000000;
+}
+
+.btn:after {
+  content:"";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-white:after {
+    background-color: #474c3c;
+}
+
+.btn:hover::after {
+  transform: scale(1.2);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation-name: moveInBottom;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+  animation-delay: .75s;
+  animation-fill-mode: backwards;
 }
