--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -10,7 +10,7 @@
             <span class="heading-primary-sub">Bio und Fair seit 1991</span>
         </h1>
 
-        <a href="#" class="btn btn-white">zum Shop</a>
+        <a href="#" class="btn btn-white btn-animated">zum Shop</a>
     </div>
 
 
