Head, Header, Button and Style copied

--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="logo-box">
-        <img src="images/Logo.svg" alt="Logo" class="logo">
+        <img src="images/Logo.svg" alt="Logo" class="logo" >
         
     </div>
 
@@ -10,7 +10,7 @@
             <span class="heading-primary-sub">Bio und Fair seit 1991</span>
         </h1>
 
-        <a href="#" class="btn btn-white btn-animated">zum Shop</a>
+        <a href="#" class="btn btn-anthrazit btn-animated">zum Shop</a>
     </div>
 
 
