--- a/src/css/base.css
+++ b/src/css/base.css
@@ -19,25 +19,19 @@
 
 header {
   height: 95vh;
-  background-image: linear-gradient(hsla(56, 52%, 76%, 0.699), rgba(71, 76, 60, 0.699) ), url(../images/coffee.jpg);
+  background-image: url(../images/coffee.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
-
-  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
 }
+
 body {
   background: #ffffff;
 
   @media (min-width: 768px) {
     color: #e2dea2;
   }
-  font-family: Roboto; 
-  font-weight: 800;
-  font-size: 16px;  
-  line-height: 1.7;
-  color:#474c3c;
-  padding: 30px; 
+
 }
 
 main {
@@ -58,8 +52,61 @@ img {
   height: auto;
 }
 
+
+
+.heading-primary {
+  backface-visibility: hidden;
+  margin-bottom: px;
+  color: #ffffff;
+}
+
+.heading-primary-main {
+display: block;
+font-size: 96px;
+font-weight: 900;
+letter-spacing: 0;
+animation-name: moveInLeft;
+animation-duration: 1s;
+animation-timing-function: ease-out;
+
+}
+
+.heading-primary-sub {
+display: block;
+font-size: 48px;
+font-weight: 900;
+letter-spacing: 0;
+animation-name: moveInRight;
+animation-duration: 1s;
+animation-timing-function: ease-out;
+
+}
+
 h2 {
-  font-size: var(--h2-font-size);
+  font-family: Roboto;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 1.1%;
+  letter-spacing: 0%;
+  text-decoration: none;
+}
+
+h3 {
+  font-family: Roboto;
+  font-weight: 900;
+  font-size: 42px;
+  line-height: 1.1%;
+  letter-spacing: 0%;
+  text-decoration: none;
+}
+
+body text {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.3%;
+  letter-spacing: 0%;
+  text-decoration: none;
 }
 
 .logo-box {
@@ -82,35 +129,7 @@ h2 {
     text-align: center;
 }
 
-.heading-primary {
-    color: #000;
-    text-transform: uppercase;
 
-    backface-visibility: hidden;
-    margin-bottom: 60px;
-    
-}
-
-.heading-primary-main {
-  display: block;
-  font-size: 60px;
-  font-weight: 400;
-  letter-spacing: 33px;
-  animation-name: moveInLeft;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-  
-}
-
-.heading-primary-sub {
-  display: block;
-  font-size: 20px;
-  font-weight: 700;
-  letter-spacing: 11px;
-  animation-name: moveInRight;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-}
 
 @keyframes moveInLeft {
   0% {
@@ -165,13 +184,14 @@ h2 {
 
 .btn:link,
 .btn:visited {
-  text-transform: uppercase;
+  color: #ffffff;
   text-decoration: none;
   padding: 15px;
   display: inline-block;
-  border-radius: 15px;
+  border-radius: 10px;
   transition: all .2s;
   position: relative;
+  translate: 0 200px; 
   font-size: 20px;
   font-weight: 400;
   letter-spacing: 1px;
@@ -179,17 +199,17 @@ h2 {
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px #9da37ac5
+  box-shadow: 0 10px 20px rgba(26,26,26,0.8)
 }
 
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 5px 10px #9da37a
+  box-shadow: 0 5px 10px rgba(215,190,157,0.8)
 }
 
-.btn-white {
-  background-color: #474c3c77;
-  color: #000000;
+.btn-anthrazit {
+  background-color:rgba(26,26,26,0.8);
+  color: rgba(26,26,26,0.8);
 }
 
 .btn:after {
@@ -205,8 +225,8 @@ h2 {
   transition: all .4s;
 }
 
-.btn-white:after {
-    background-color: #474c3c79;
+.btn-anthrazit:after {
+    background-color: rgba(26, 26, 26, 0.8);
 }
 
 .btn:hover::after {
