--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -5,3 +5,43 @@
   /* Text Styles */
   --h2-font-size: 26px;
 }
+
+
+/*
+// Media Query manager
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
+// Very large desktop devices (1920px and up)
+@media (min-width: 1920px) { ... }
+
+1em = 16px (36,48,62,75,120)
+*/
+
+  @mixin respond(breakpoint) {
+    @if $breakpoint == phone {
+      @media (min-width: 576px) {@content}; 
+    }
+    @if $breakpoint == tablet {
+      @media (min-width: 768px) {@content};
+    }
+    @if $breakpoint == desktop {
+      @media (min-width: 992px) {@content};
+    }
+    @if $breakpoint == ldesktop {
+      @media (min-width: 1200px) {@content};
+    }
+    @if $breakpoint == xldesktop {
+      @media (min-width: 1920px) {@content};
+    }   
+  }
+  
