Navigation Topbar -FAIL!

--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -2,6 +2,38 @@
     <div class="logo-box">
         <img src="images/Logo.svg" alt="Logo" class="logo" >
         
+        <nav class="topbar">
+
+            <div class="top-nav-box">
+                <nav class="topbar">
+                    <ul class="top-nav">
+                        <li class="top-nav__item">
+                            <a href="#" class="top-nav__link">
+                                <span>das Café</span>
+                            </a>
+                        </li>
+                        <li class="top-nav__item">
+                            <a href="#" class="top-nav__link">
+                                <span>Herkunft</span>
+                            </a>
+                        </li>
+                        <li class="top-nav__item">
+                            <a href="#" class="top-nav__link">
+                                <span>Shop</span>
+                            </a>
+                            <li class="top-nav__item">
+                            <a href="#" class="top-nav__link">
+                                <img src="images/Shop Icon.svg" alt="Cart" class="top-nav__icon">
+                            </a>
+                        </li>
+                        </li>
+                    </ul>
+
+
+                </nav>
+                
+            </div>
+        </nav>
     </div>
 
     <div class="text-box">
