--- a/src/css/base.css
+++ b/src/css/base.css
@@ -40,7 +40,7 @@ html{
 }
 
 header {
-  height: 95vh;
+  height: 65vh;
   background-image: url(../images/coffee.jpg);
   background-size: cover;
   background-position: top;
@@ -48,6 +48,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 
 body {
@@ -83,6 +84,9 @@ img {
   backface-visibility: hidden;
   margin-bottom: px;
   color: #ffffff;
+  font-family: sans-serif;
+  
+  
 }
 
 .heading-primary-main {
@@ -98,8 +102,9 @@ animation-timing-function: ease-out;
 
 .heading-primary-sub {
 display: block;
-font-size: 48px;
-font-weight: 900;
+font-family: sans-serif;
+font-size: 18px;
+font-weight: 400;
 letter-spacing: 0;
 animation-name: moveInRight;
 animation-duration: 1s;
@@ -108,7 +113,7 @@ animation-timing-function: ease-out;
 }
 
 h2 {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-weight: 900;
   font-size: 48px;
   line-height: 1.1%;
@@ -117,7 +122,7 @@ h2 {
 }
 
 h3 {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-weight: 900;
   font-size: 42px;
   line-height: 1.1%;
@@ -126,7 +131,7 @@ h3 {
 }
 
 body text {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.3%;
@@ -148,49 +153,71 @@ body text {
 }
 
 .top-nav-box {
-  position: absolute;
-  transform: translate();
+  position: fixed;
   justify-content: space-between;
+  top: 0;
+  right: 0;
+  transform: translateY(-70px);
 
 }
 
 .top-nav{
-  background-color: #474c3c;
   list-style: none;
-  justify-content: space-between;
   align-items: center;
-  font-size: 42px;
-  font-weight: 900;
+  font-size: 18px;
+  font-weight: 400;
   letter-spacing: 0;
-  text-decoration: none;
+  backface-visibility: hidden;
+  padding: 40px;
+  float: left;
+  font-family: sans-serif;
+  
+  
+  .top-nav__item {
+    
+    color: #ffffff;
+    text-align: center;
+    display: inline;
+    text-decoration: none;
+    margin-right: 2vh;
+    
+    
+
+  }
+
+  .top-nav__link,
+  .top-nav__link:visited{
+    color: #ffffff;
+    text-decoration: none;
+  }
+
+  .top-nav__link:hover {
+    transform: translateY(-30px);
+    text-decoration-line: underline;
+    
+
+  }
+   
+  .top-nav__link:active {
+      transform: translateY(-10px);
+      
+    }
+    
   
 
-  &__Item {
-
-  }
-  &__link {
-    
-  }
-  &__link:hover {
-    color: #E9E9E9;
-    
-  }
-
-  &__link:visited{
-    color: rgba(255,255,255,1);
-    text-decoration: none;
-    display: block;
-    margin-right: auto;
-    color: #E9E9E9;
-    display: flex;
-    align-items: center;
-    
-   
-    
-    
-  }
-  &__icon {
+  .top-nav__icon {
     color: #ffffff;
+    fill: #ffffff;
+    transform: translateY(65px);
+    
+    
+    
+  }
+
+  .top-nav__icon:active {
+    color: #006d7e;
+    fill: #ffffff;
+    transform: translate(10);
     
   }
   
@@ -201,7 +228,7 @@ body text {
 
 .text-box {
   position: absolute;
-    top: 40%;  
+    top: 50%;  
     left:50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -269,10 +296,11 @@ body text {
   border-radius: 10px;
   transition: all .2s;
   position: relative;
-  translate: 0 200px; 
-  font-size: 20px;
+  translate: 0 100px; 
+  font-size: 18px;
   font-weight: 400;
   letter-spacing: 1px;
+  font-family: sans-serif;
 }
 
 .btn:hover {
