--- a/src/components/main.hbs
+++ b/src/components/main.hbs
@@ -1,32 +1,46 @@
 <main class="main">
-    <div class="text-box">
-       <h2>Rösterei & Café</h2>
-       <a>Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen
-        Rösterei, serviert im gemütlichen Café in der innenstadt.
-       </a>
+    <div class="content-box">
+        <div class="text-box__left">
+           <div>
+                <h2>Rösterei & Café</h2>
+            <br>
+            <br>
+                <p>Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen
+                    Rösterei, serviert im gemütlichen Café in der innenstadt.
+                </p>
+            </div>
+          
+            <div class="info-box__left">
+                 <a> Komm vorbei! <br> Fraunhoferstr. 13, Kiel </a>
+            </div>
 
-       <div class="info-box-left">
-        <a> Komm vorbei! <br> Fraunhoferstr. 13, Kiel </a>
+            <div class="info-box__right">
+                 <a> Mo - Fr 8-18 Uhr <br> Sa 11-18 Uhr</a>
+            </div>
+
        </div>
 
-       <div class="info-box-right">
-        <a> Mo - Fr 8-18 Uhr <br> Sa 11-18 Uhr</a>
-       </div>
+        <div class="image-box__right">
+            <img src="images/Coffee-shop.jpg" alt="Café" class="image__right" >
+        </div>
+
     </div>
 
-    <div class="image-box">
-        <img src="images/Coffee-shop.jpg" alt="Café" class="Café" >
-    </div>
+    <div class=content-box>
 
+        <div class="image-box__left">
+            <img src="images/coffee-plant.jpg" alt="Café" class="image__left" >
+        </div>
+    
 
-    <div class="image-box">
-        <img src="images/coffee-plant.jpg" alt="Café" class="Café" >
-    </div>
-
-    <div class="text-box">
-        <h2>Bio und Fair</h2>
-       <a>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konstantien leben die Blindtexte. Und das alles in der besten Bio Qualität </a>
-        <a href="mehr"></a>
+    
+        <div class="text-box__right">
+            <h2>Bio und Fair</h2>
+            <br>
+                 <a>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konstantien leben die Blindtexte. Und das alles in der besten Bio Qualität </a>
+            <a href="mehr"></a>
+        </div>
+    
     </div>
 
    
