--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,14 +1,3 @@
-/* 
-  Colors
-  White: rgba(255,255,255,1) #FFFFFF
-  Anthrazit: rgba(26,26,26,1) #1A1A1A
-  Kraftpapier: rgba(215,190,157,1) #D7BE9D
-  Petrol: rgba(0,109,126,1) #006D7E
-  Rosa: rgba(237,209,201,1) #EDD1C9
-  Orange: rgba(215,124,18,1) #D77C12
-  Medium Grey: rgba(115,115,115,1) #737373
-  Light Grey: rgba(233,233,233,1) #E9E9E9
-*/
 
 *{
   margin: 0; 
@@ -16,28 +5,6 @@
   box-sizing: border-box;
 }
 
-
-html{
-  @include respond (phone) {
-    font-size: 50%
-  }
-
-  @include respond (tablet) {
-    font-size: 60%
-  }
-
-  @include respond (desktop) {
-      font-size: 70%  
-  }
-
-  @include respond (ldesktop) {
-    font-size: 80%  
-  }
-
-  @include respond (xldesktop) {
-    font-size: 90%  
-  }
-}
 
 .header {
   height: 65vh;
@@ -48,8 +15,8 @@ html{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
+
 
 .body {
   background: #ffffff;
@@ -58,8 +25,8 @@ html{
   @media (min-width: 768px) {
     color: #e2dea2;
   }
-
 }
+
 
 .main {
   margin: 0 auto;
@@ -75,44 +42,22 @@ html{
   position: relative;
 }
 
+
 img {
   max-width: 100%;
   height: auto;
 }
 
 
-
-.heading-primary {
-  backface-visibility: hidden;
-  margin-bottom: px;
-  color: #ffffff;
-  font-family: sans-serif;
-  
-  
+.h1 {
+  font-family: Roboto, sans-serif;
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 1.1%;
+  letter-spacing: 0%;
+  text-decoration: none;
 }
 
-.heading-primary-main {
-display: block;
-font-size: 96px;
-font-weight: 900;
-letter-spacing: 0;
-animation-name: moveInLeft;
-animation-duration: 1s;
-animation-timing-function: ease-out;
-
-}
-
-.heading-primary-sub {
-display: block;
-font-family: sans-serif;
-font-size: 18px;
-font-weight: 400;
-letter-spacing: 0;
-animation-name: moveInRight;
-animation-duration: 1s;
-animation-timing-function: ease-out;
-
-}
 
 .h2 {
   font-family: Roboto, sans-serif;
@@ -132,6 +77,7 @@ animation-timing-function: ease-out;
   text-decoration: none;
 }
 
+
 .body text {
   font-family: Roboto, sans-serif;
   font-weight: 400;
@@ -141,268 +87,3 @@ animation-timing-function: ease-out;
   text-decoration: none;
 }
 
-.logo-box {
-    position: absolute;
-    top: 40px;  
-    left:40px;
-}
-
-.logo {
-    height: 35px;
-    fill: #ffffff;
-    color: #ffffff;
-
-}
-
-.top-nav-box {
-  position: fixed;
-  justify-content: space-between;
-  top: 0;
-  right: 0;
-  transform: translateY(-70px);
-
-}
-
-.top-nav{
-  list-style: none;
-  align-items: center;
-  font-size: 18px;
-  font-weight: 400;
-  letter-spacing: 0;
-  backface-visibility: hidden;
-  padding: 40px;
-  float: left;
-  font-family: sans-serif;
-  
-  
-  .top-nav__item {
-    
-    color: #ffffff;
-    text-align: center;
-    display: inline;
-    text-decoration: none;
-    margin-right: 2vh;
-    
-    
-
-  }
-
-  .top-nav__link,
-  .top-nav__link:visited{
-    color: #ffffff;
-    text-decoration: none;
-  }
-
-  .top-nav__link:hover {
-    transform: translateY(-30px);
-    text-decoration-line: underline;
-    
-
-  }
-   
-  .top-nav__link:active {
-      transform: translateY(-10px);
-      
-    }
-    
-  
-
-  .top-nav__icon {
-    color: #ffffff;
-    fill: #ffffff;
-    transform: translateY(65px);
-    
-    
-    
-  }
-
-  .top-nav__icon:active {
-    color: #006d7e;
-    fill: #ffffff;
-    transform: translate(10);
-    
-  }
-  
-  
-}
-
-
-
-.text-box {
-  position: absolute;
-    top: 50%;  
-    left:50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-100px)
-
-  }
-
-80% {
-  transform: translateX(10px);
-}
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(100px)
-
-  }
-
-80% {
-  transform: translateX(-10px);
-}
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(100px)
-
-  }
-
-80% {
-  transform: translateY(-10px);
-}
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-.btn:link,
-.btn:visited {
-  color: #ffffff;
-  text-decoration: none;
-  padding: 15px;
-  display: inline-block;
-  border-radius: 10px;
-  transition: all .2s;
-  position: relative;
-  translate: 0 100px; 
-  font-size: 18px;
-  font-weight: 400;
-  letter-spacing: 1px;
-  font-family: sans-serif;
-}
-
-.btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(26,26,26,0.8)
-}
-
-.btn:active {
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(215,190,157,0.8)
-}
-
-.btn-anthrazit {
-  background-color:rgba(26,26,26,0.8);
-  color: rgba(26,26,26,0.8);
-}
-
-.btn:after {
-  content:"";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 15px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: all .4s;
-}
-
-.btn-anthrazit:after {
-    background-color: rgba(26, 26, 26, 0.8);
-}
-
-.btn:hover::after {
-  transform: scale(1.2);
-  opacity: 0;
-}
-
-.btn-animated {
-  animation-name: moveInBottom;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-  animation-delay: .75s;
-  animation-fill-mode: backwards;
-}
-
-.content-box {
-  background-color: rgb(255, 255, 255);
-  color: black;
-  position: relative;
-  display: flex;
-  font-family: sans-serif;
-  
-}
-
-.text-box__right {
-  width: 50%;
-  padding: 5% 10% 5% 5%;
-}
-
-.text-box__left {
-  width: 50%;
-  padding: 5% 
-}
-
-.info-box__left {
-  width: 65%;
-  display: block;
-  position: relative;
-  transform: translateY(100%);
-}
-
-.info-box__right {
-  width: 35%;
-  float:right;
-  position: relative;
-  
-  
-}
-
-
-.image-box__left {
-  width: 50%;
-  padding: 0% 0% 5% 5%;
-  position: relative;
-  
-  
-  
-}
-
-.image-box__right {
-  width: 50%;
-  padding: 5% 5% 10% 0%;
-  position: relative;
-  float: right;
-  
-}
-
-.image__right {
-position: top;
-
-}
