--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,9 @@
 @import "variables.css";
 @import "base.css";
 @import "components/hero.css";
+@import "components/Logo.css";
+@import "components/top-nav.css";
+@import "components/Animations.css";
+@import "components/buttons.css";
+@import "components/headings.css";
+@import "components/mainpage-boxes.css";
