--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -65,19 +65,31 @@
 .btn-white {
    
     color: rgba(255, 255, 255, 0.8);
-    position: relative;
-    display:inline-block;
-    transform: translateY(-80px);
+    position: absolute;
+    display: inline-block;
+    transform: translateY();
     outline-color: #ffffff;
     text-decoration: none;
     outline-style: solid;
-    border-radius: 10px;
+    border-radius: 2px;
     padding: 5px 10px 5px 10px;
-    
-   justify-self: center;
-   align-self: center;
-
-   
-    
-   
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    text-align: center;
+    ruby-align: center;
+    justify-content: center;
+    justify-self: center;
+    justify-items: center;
+    margin: auto 0px;
   }
+
+.btn-mehr {
+  color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  display: inline-block;
+  transform: translateY();
+  outline-color: #ffffff;
+  text-decoration: none;
+}
+
