--- a/src/css/components/mainpage-boxes.css
+++ b/src/css/components/mainpage-boxes.css
@@ -70,11 +70,11 @@
     position: relative;
     height: auto;
     width: max 100%;
-    padding: 5%
-    ;
-   
-   
-   
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;   
   }
   .Costa-Rica {
    margin: 0.8%;
