Mainpage, organizing items still in progress

--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -23,7 +23,7 @@
                             </a>
                             <li class="top-nav__item">
                             <a href="#" class="top-nav__link">
-                                <img src="images/Shop Icon.svg" alt="Cart" class="top-nav__icon">
+                                <img src="images/Shop Icon White.svg" alt="Cart" class="top-nav__icon">
                             </a>
                         </li>
                         </li>
