--- a/src/css/components/mainpage-boxes.css
+++ b/src/css/components/mainpage-boxes.css
@@ -161,23 +161,27 @@
       justify-content: space-between;
       height: 100px;
       width: 100%;
-      
-      
-      
-      
-
      }
+
 
      .Logo-Text {
       display: flex;
       flex-direction: row;
       flex: 1;
-      margin: 16%;
-      
-      
-     
-      
+      margin: 16%; 
      }
+
+
+  .map {
+    height: 65vh;
+  }
+
+  
+  .Titel {
+    margin: 0% 0% 2% 5%;
+  }
+
+
 
 
     
