--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -76,7 +76,7 @@
     margin: 5%
   }
 
-.btn-mehr {
+.btn_Cofee-bags {
   color: rgba(255, 255, 255, 0.8);
   position: absolute;
   display: inline-block;
