Mainpage ready V1 push 2

--- a/src/components/Footer.hbs
+++ b/src/components/Footer.hbs
@@ -1,5 +1,29 @@
 <footer class="Footer">
+   
+    <div class="Flexbox_Logo-Footer">
+        <img src="images/Logo.svg" alt="Logo" class="Logo_Footer">
+        <br>
+        <h2>Rustica</h2>
+        <br>
+        <p>Café & Rösterei</p>
+    </div>
 
+    <div class="Flexbox_Adresse-Öffnungszeiten">   
+        <p>Komm uns besuchen! <br> Frauenhoferstr. 13, Kiel</p>
+        <br>
+        <p>Mo-Fr 8-18 Uhr <br> Sa 11-18 Uhr</p>
+    </div>
+
+    <div class="Flexbox_Links-Footer">
+        <a href="#" class="Link_Footer">Café</a>
+        <a href="#" class="Link_Footer">Shop</a>
+        <a href="#" class="Link_Footer">Herkunft</a>
+    </div>
+
+    <div class="Flexbox_Links-Footer">
+        <a href="#" class="Link_Footer">Impressum</a>
+        <a href="#" class="Link_Footer">Datenschutz</a>
+    </div>
 
 </footer>
 
