--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -1,42 +1,35 @@
 <header class="header">
-    <div class="logo-box">
-        <img src="images/Logo.svg" alt="Logo" class="logo" >
-        
-        <nav class="topbar">
-
-            <div class="top-nav-box">
-                <nav class="topbar">
-                    <ul class="top-nav">
-                        <li class="top-nav__item">
-                            <a href="#" class="top-nav__link">
+            <div class="Box_top-nav">
+                <nav class="Bar_top-nav">
+                    <img src="images/Logo.svg" alt="Logo" class="Logo_top-nav" >
+                    <ul class="List_top-nav">
+                        <li class="Item_top-nav">
+                            <a href="#" class="Link_top-nav">
                                 <span>das Café</span>
                             </a>
                         </li>
-                        <li class="top-nav__item">
-                            <a href="#" class="top-nav__link">
+                        <li class="Item_top-nav">
+                            <a href="#" class="Link_top-nav">
                                 <span>Herkunft</span>
                             </a>
                         </li>
-                        <li class="top-nav__item">
-                            <a href="#" class="top-nav__link">
+                        <li class="Item_top-nav">
+                            <a href="#" class="Link_top-nav">
                                 <span>Shop</span>
                             </a>
-                            <li class="top-nav__item">
-                            <a href="#" class="top-nav__link">
+                            <li class="Item_top-nav">
+                            <a href="#" class="Link_top-nav">
                                 <img src="images/Shop Icon White.svg" alt="Cart" class="top-nav__icon">
                             </a>
                         </li>
                         </li>
                     </ul>
-
-
                 </nav>
-                
             </div>
-        </nav>
-    </div>
+        
+    
 
-    <div class="text-box">
+    <div class="Textbox_Header">
         <h1 class="heading-primary">
             <span class="heading-primary-main">Rustica</span>
             <span class="heading-primary-sub">Bio und Fair seit 1991</span>
