Desktop Mainpage ready

--- a/src/css/components/headings.css
+++ b/src/css/components/headings.css
@@ -1,8 +1,7 @@
 .heading-primary {
     backface-visibility: hidden;
-    margin-bottom: px;
     color: #ffffff;
-    font-family: sans-serif;
+    font-family: Roboto, sans-serif;
   }
   
   .heading-primary-main {
@@ -21,6 +20,7 @@
   font-size: 18px;
   font-weight: 400;
   letter-spacing: 0;
+  
   animation-name: moveInRight;
   animation-duration: 1s;
   animation-timing-function: ease-out;
