--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,4 +6,4 @@
 @import "components/buttons.css";
 @import "components/headings.css";
 @import "components/mainpage-boxes.css";
-@import "components/links.css"
+@import "components/links.css";
