--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -11,22 +11,33 @@
   Light Grey: rgba(233,233,233,1) #E9E9E9
 */
   --div-color: #000000;
+  --div-color: #FFFFFF;
+  --div-color: #1A1A1A;
+  --div-color: #D7BE9D;
+  --div-color: #006D7E;
+  --div-color: #EDD1C9;
+  --div-color: #D77C12;
+  --div-color: #737373;
+  --div-color: #E9E9E9;
+  
 
   /* 
   Text Styles Desktop:
    */
-  --h1-font-size: 96px; 
-  --h2-font-size: 48px;
-  --h3-font-size: 42px;
-  --body-text-font-size: 18px;
-
+    --h1-font-size: 96px; 
+    --h2-font-size: 48px;
+    --h3-font-size: 42px;
+    --body-text-font-size: 18px;
+  
   /* 
   Text Styles Mobil:
    */
-  --h1-font-size: 64px; 
-  --h2-font-size: 36px;
-  --h3-font-size: 32px;
-  --body-text-font-size: 14px;
+  
+   --h1-font-size: 64px; 
+   --h2-font-size: 36px;
+   --h3-font-size: 32px;
+   --body-text-font-size: 14px;
+  
 }
 
 
@@ -51,23 +62,15 @@
 */
 
 
+*{
+  --h1-font-size: 64px; 
+  --h2-font-size: 316px;
+  --h3-font-size: 32px;
+  --body-text-font-size: 14px;
+}
+ 
+.h2 {
+  font-size: 60;
+}
 
-  @mixin respond(breakpoint) {
-    @if $breakpoint == phone {
-      @media (min-width: 576px) {@content}; 
-    }
-    @if $breakpoint == tablet {
-      @media (min-width: 768px) {@content};
-    }
-    @if $breakpoint == desktop {
-      @media (min-width: 992px) {@content};
-    }
-    @if $breakpoint == ldesktop {
-      @media (min-width: 1200px) {@content};
-    }
-    @if $breakpoint == xldesktop {
-      @media (min-width: 1920px) {@content};
-    }   
-  }
-  
 
