--- a/src/css/base.css
+++ b/src/css/base.css
@@ -5,8 +5,25 @@
   box-sizing: border-box;
 }
 
+body {
+  @media (max-width: 768px) {
+  h1 {
+   font-size: 64px;
+   }
 
-.header {
+  h2 {
+    font-size: 36px;
+     }
+
+  h3 {
+    font-size: 32px;
+       }
+  font-size: 14px;
+  }
+}
+
+
+header {
   height: 65vh;
   background-image: url(../images/coffee.jpg);
   background-size: cover;
@@ -18,16 +35,13 @@
 }
 
 
-.body {
-  background: #ffffff;
-  color: black;
-
-  @media (min-width: 768px) {
-    color: #e2dea2;
-  }
+main {
+ position: relative;
+ 
 }
 
-.Footer {
+
+Footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -38,20 +52,6 @@
 }
 
 
-.main {
-  margin: 0 auto;
-  max-width: 1440px;
-
-  & div {
-    color: #000000;
-
-    @media (min-width: 768px) {
-      color: var(--div-color);
-    }
-  }
-  position: relative;
-}
-
 
 img {
   max-width: 100%;
@@ -59,40 +59,40 @@ img {
 }
 
 
-.h1 {
+h1 {
   font-family: Roboto, sans-serif;
   font-weight: 900;
   font-size: 96px;
-  line-height: 1.1%;
+  line-height: 1.1;
   letter-spacing: 0%;
-  text-decoration: none;
+  text-decoration: none; 
 }
 
 
-.h2 {
+h2 {
   font-family: Roboto, sans-serif;
   font-weight: 900;
   font-size: 48px;
-  line-height: 1.1%;
+  line-height: 1.1;
   letter-spacing: 0%;
   text-decoration: none;
 }
 
-.h3 {
+h3 {
   font-family: Roboto, sans-serif;
   font-weight: 900;
   font-size: 42px;
-  line-height: 1.1%;
+  line-height: 1.1;
   letter-spacing: 0%;
   text-decoration: none;
 }
 
 
-.body text {
+body text {
   font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.3%;
+  line-height: 1.3;
   letter-spacing: 0%;
   text-decoration: none;
 }
