--- a/src/css/components/mainpage-boxes.css
+++ b/src/css/components/mainpage-boxes.css
@@ -17,21 +17,30 @@
     padding: 5%;
   }
   
+  .Titel_Rösterei-Café {
+    margin: 0 0 5% 0;
+  }
+
+
+  .Titel_Bio-und-Fair {
+    margin: 0 0 5% 0;
+  }
   
+
   .Textbox_right {
     width: 50%;
-    padding: 5% 5% 5% 5%;
+    padding: 5% 10% 5% 5%;
   }
   
   
   .Textbox_left {
     width: 50%;
-    padding: 5% 5% 5% 0% 
+    padding: 5% 10% 5% 0% 
   }
   
   
   .Infobox_left {
-    width: 65%;
+    width: 75%;
     display: block;
     position: relative;
     transform: translateY(100%);
@@ -39,7 +48,7 @@
   
   
   .Infobox_right {
-    width: 35%;
+    width: 25%;
     float:right;
     position: relative;
   }
@@ -74,6 +83,9 @@
     flex-wrap: wrap;
   }
 
+  .Titel_Entdecke-unsere-Kaffee-Sorten {
+    margin: 0 0 5% 0;
+  }
 
   .Flexbox_Costa-Rica {
    display: flex;
