starting Mobile Version

--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -1,4 +1,5 @@
 <header class="header">
+           <div class="Menu_Desktop">
             <div class="Box_top-nav">
                 <nav class="Bar_top-nav">
                     <img src="images/Logo.svg" alt="Logo" class="Logo_top-nav" >
@@ -26,7 +27,7 @@
                     </ul>
                 </nav>
             </div>
-        
+        </div>
     
 
     <div class="Textbox_Header">
