--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,3 +7,4 @@
 @import "components/headings.css";
 @import "components/mainpage-boxes.css";
 @import "components/links.css";
+@import "components/media.css"
